CHANGE config.json - deprecated all footer config entries, assigned to shop builder setup

--- a/config.json
+++ b/config.json
@@ -477,6 +477,7 @@
                 "footer.number_of_features": {
                     "type": "selectBox",
                     "required": false,
+                    "deprecated": true,
                     "label": "Config.footerNumberOfFeaturesLabel",
                     "options": {
                         "defaultValue": "3",
@@ -530,6 +531,7 @@
                 "footer.number_of_cols": {
                     "type": "selectBox",
                     "required": false,
+                    "deprecated": true,
                     "label": "Config.footerNumberOfColsLabel",
                     "options": {
                         "defaultValue": "3",
@@ -561,6 +563,7 @@
                 "footer.col_1_categories": {
                     "type": "inputText",
                     "required": false,
+                    "deprecated": true,
                     "label": "Config.footerCol1CategoriesLabel",
                     "options": {
                         "defaultValue": ""
@@ -578,6 +581,7 @@
                 "footer.col_2_categories": {
                     "type": "inputText",
                     "required": false,
+                    "deprecated": true,
                     "label": "Config.footerCol2CategoriesLabel",
                     "options": {
                         "defaultValue": ""
@@ -595,6 +599,7 @@
                 "footer.col_3_categories": {
                     "type": "inputText",
                     "required": false,
+                    "deprecated": true,
                     "label": "Config.footerCol3CategoriesLabel",
                     "options": {
                         "defaultValue": ""
@@ -603,6 +608,7 @@
                 "footer.cancellation_use_pdf": {
                     "type": "checkBox",
                     "required": false,
+                    "deprecated": true,
                     "label": "Config.footerCancellationUsePdfLabel",
                     "options": {
                         "defaultValue": false
@@ -611,6 +617,7 @@
                 "footer.cancellation_pdf_path": {
                     "type": "inputFile",
                     "required": false,
+                    "deprecated": true,
                     "label": "Config.footerCancellationPdfPathLabel",
                     "options": {
                         "defaultValue": ""
