--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "font-awesome": "^4.6.3",
     "jquery": "^3.3.1",
     "lightbox2": "^2.10.0",
+    "lodash": "^4.17.11",
     "moment": "^2.22.1",
     "owl.carousel": "2.2.0",
     "popper.js": "^1.14.3",
