--- a/config.json
+++ b/config.json
@@ -353,16 +353,12 @@
                     "deprecated": true
                 },
                 "header.show_category_types": {
-                    "type": "selectBox",
+                    "type": "multiCheckBox",
                     "required": false,
                     "label": "Config.headerShowCategoryTypesLabel",
                     "options": {
                         "defaultValue": "all",
-                        "selectBoxValues": [
-                            {
-                                "value": "all",
-                                "caption": "Config.headerShowCategoryTypesAll"
-                            },
+                        "checkBoxValues": [
                             {
                                 "value": "item",
                                 "caption": "Config.headerShowCategoryTypesItem"
@@ -370,6 +366,10 @@
                             {
                                 "value": "content",
                                 "caption": "Config.headerShowCategoryTypesContent"
+                            },
+                            {
+                                "value": "blog",
+                                "caption": "Config.headerShowCategoryTypesBlog"
                             }
                         ]
                     }
