--- a/config.json
+++ b/config.json
@@ -4295,6 +4295,14 @@
                             }
                         ]
                     }
+                },
+                "log.check_syntax": {
+                    "type": "checkBox",
+                    "required": false,
+                    "label": "Config.logCheckSyntax",
+                    "options": {
+                        "defaultValue": "true"
+                    }
                 }
             }
         }
