--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.26.0",
-    "bootstrap": "v4.0.0-alpha.3",
+    "bootstrap": "4.1.3",
     "custom-event-polyfill": "^0.3.0",
     "detect-browser": "^2.3.0",
     "flag-icon-css": "^2.9.0",
