--- a/config.json
+++ b/config.json
@@ -2579,6 +2579,28 @@
                         "defaultValue": "false"
                     }
                 },
+                "my_account.confirmation_link_expiration": {
+                    "type": "selectBox",
+                    "required": false,
+                    "label": "Config.myAccountConfirmationLinkExpirationLabel",
+                    "options": {
+                        "defaultValue": "always",
+                        "selectBoxValues": [
+                            {
+                              "value": "always",
+                              "caption": "Config.myAccountConfirmationLinkExpirationAlways"
+                            },
+                            {
+                              "value": "30",
+                              "caption": "Config.myAccountConfirmationLinkExpirationThirtyDays"
+                            },
+                            {
+                                "value": "90",
+                                "caption": "Config.myAccountConfirmationLinkExpirationNinetyDays"
+                            }
+                        ]
+                    }
+                },
                 "billing_address.show": {
                     "type": "multiCheckBox",
                     "required": false,
