FIX default value for optional appearance

--- a/resources/views/Widgets/Helper/Includes/optionalAppearance.inc.json
+++ b/resources/views/Widgets/Helper/Includes/optionalAppearance.inc.json
@@ -1,7 +1,7 @@
 {
     "type": "select",
     "required": true,
-    "defaultValue": "primary",
+    "defaultValue": "none",
     "options": {
         "name": "Widget.widgetAppearanceLabel",
         "tooltipText": "Widget.widgetAppearanceTooltip",
