--- a/resources/views/Widgets/MyAccount/AccountSettingsWidget.json
+++ b/resources/views/Widgets/MyAccount/AccountSettingsWidget.json
@@ -1,12 +1,18 @@
 {
     "identifier": "Ceres::AccountSettingsWidget",
-    "label": "Widget.accountSettingsLabel",
+    "label": "Widget.myAccountAccountSettingsLabel",
     "previewImageURL": "/images/widgets/accountSettings.svg",
     "type": "static",
     "categories": ["static"],
     "position": 100,
     "widgetClass": "Ceres\\Widgets\\MyAccount\\AccountSettingsWidget",
     "settings": {
-
+        "appearance": "@include(appearance)",
+        "text": {
+            "type": "codeEditor",
+            "options": {
+                "name": "Widget.myAccountHintTextLabel"
+            }
+        }
     }
 }
